--- a/views/index.hbs
+++ b/views/index.hbs
@@ -59,22 +59,39 @@
         <div class="row">
             <div class="col-md-10 col-12 mx-auto">
                 <div class="row">
-
-                    <!-- Right side div  -->
-                    <div class="col-md-6 col-12 main_header_right">
-                        <figure>
-                            <img src="images/about.png" alt="" class="img-fluid" title="Nilesh">
-                        </figure>
-                    </div>
-
                     <!-- left side div  -->
                     <div class="col-md-6 col-12 main_header_left">
-                        <p>Welcome to About page</p>
-                        <h1>I am a  <span class="text_clr">mern stack developer</span> from INDIA</h1>
+                        <p>Welcome to weather app</p>
+                        <h1>Get the latest <span class="text_clr">Weather</span> Info of your city</h1>
                         <a href="/weather"> <button>check now</button></a>
                     </div>
 
-                    
+                    <!-- Right side div  -->
+                    <div class="col-md-6 col-12 main_header_right">
+                        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="images/bg1.jpg" class=" w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/bg2.jpg" class=" w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/bg3.jpg" class=" w-100" alt="...">
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+                                data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleControls" role="button"
+                                data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
                 </div>
 
             </div>
@@ -105,4 +122,4 @@
         crossorigin="anonymous"></script>
 </body>
 
-</html>     
+</html>
