--- a/public/css/style.css
+++ b/public/css/style.css
@@ -135,8 +135,8 @@ body{
 .temp_form{
     width: 60%;
     position: relative;
-    /* margin: 5rem auto; */
-    margin: 10rem auto 6rem;
+    margin: 5rem auto;
+    /* margin: 10rem auto 6rem; */
 
 }
 .temp_form input[type="text"]{
@@ -224,7 +224,7 @@ body{
 .main_layer .middle_layer p,
 .main_layer .middle_layer .fa{
     font-size: 7rem;
-    font-weight: 900;
+    font-weight: 600;
 }
 
 .fa{
@@ -268,4 +268,16 @@ footer p{
         height: auto;
         margin-top: 3rem ;
     }
+
+    .temp_form{
+        width: auto;
+    }
+    .tempInformation{
+        width: auto ;
+    }
+        .main_layer .middle_layer p,
+        .main_layer .middle_layer .fa {
+            font-size: 5rem;
+            font-weight: 600;
+        }
 }
